--- a/src/app/component/carousel.component.html
+++ b/src/app/component/carousel.component.html
@@ -1,4 +1,4 @@
-<div class="relative w-full">
+<div class="relative w-full carousel-container">
   <p-galleria 
     [value]="images" 
     (valueChange)="onImagesChange($event)" 
@@ -14,10 +14,3 @@
       <img [src]="item.itemImageSrc" class="w-full h-auto" />
     </ng-template>
   </p-galleria>
-  <button class="absolute top-1/2 left-0 transform -translate-y-1/2 bg-gray-800 text-white p-2 rounded-full" (click)="prev()">
-    &#10094;
-  </button>
-  <button class="absolute top-1/2 right-0 transform -translate-y-1/2 bg-gray-800 text-white p-2 rounded-full" (click)="next()">
-    &#10095;
-  </button>
-</div>
