90% road to done

--- a/src/app/component/carousel.component.html
+++ b/src/app/component/carousel.component.html
@@ -8,9 +8,9 @@
     [showThumbnails]="false" 
     [responsiveOptions]="responsiveOptions" 
     [containerStyle]="{ 'width': '100%' }"
-    [autoplayInterval]="5000"
     #galleria>
     <ng-template pTemplate="item" let-item>
       <img [src]="item.itemImageSrc" class="w-full h-auto" />
     </ng-template>
   </p-galleria>
+</div>
