--- a/src/app/component/employee.component.html
+++ b/src/app/component/employee.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-between items-center mb-4">
   <!-- Button to open dialog -->
-  <button mat-button (click)="onAdd()" class="bg-blue-500 text-white">Add New Employee</button>
+  <button mat-raised-button class="bg-blue-500 text-white" (click)="openDialog()">Add New Employee</button>
 
   <!-- Search Bar -->
   <mat-form-field class="search-bar w-3/5">
@@ -59,10 +59,10 @@
 
   <ng-template #dialogTemplate>
     <h2 mat-dialog-title>{{isNew ? 'Add New Employee Data' : 'Edit Employee Data'}}</h2>
-    <mat-dialog-content style="overflow: hidden;">
+    <mat-dialog-content>
       <form [formGroup]="selectedEmployeeForm" (ngSubmit)="onSave()">
-        <div class="mb-4">
-          <mat-form-field appearance="fill" class="modal-form-field">
+        <div class="form-field-container">
+          <mat-form-field appearance="fill" class="form-field">
             <mat-label>First Name</mat-label>
             <input matInput formControlName="firstName" required>
             <mat-error *ngIf="selectedEmployeeForm.get('firstName')?.hasError('required')">
@@ -70,8 +70,8 @@
             </mat-error>
           </mat-form-field>
         </div>
-        <div class="mb-4">
-          <mat-form-field appearance="fill" class="modal-form-field">
+        <div class="form-field-container">
+          <mat-form-field appearance="fill" class="form-field">
             <mat-label>Last Name</mat-label>
             <input matInput formControlName="lastName" required>
             <mat-error *ngIf="selectedEmployeeForm.get('lastName')?.hasError('required')">
@@ -79,8 +79,8 @@
             </mat-error>
           </mat-form-field>
         </div>
-        <div class="mb-4">
-          <mat-form-field appearance="fill" class="modal-form-field">
+        <div class="form-field-container">
+          <mat-form-field appearance="fill" class="form-field">
             <mat-label>Email</mat-label>
             <input matInput formControlName="email" required>
             <mat-error *ngIf="selectedEmployeeForm.get('email')?.hasError('required')">
@@ -91,8 +91,8 @@
             </mat-error>
           </mat-form-field>
         </div>
-        <div class="mb-4">
-          <mat-form-field appearance="fill" class="modal-form-field">
+        <div class="form-field-container">
+          <mat-form-field appearance="fill" class="form-field">
             <mat-label>Date of Birth</mat-label>
             <input matInput formControlName="dateOfBirth" [matDatepicker]="picker" required>
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -105,13 +105,14 @@
             </mat-error>
           </mat-form-field>
         </div>
-        <div class="flex justify-end">
-          <button mat-button type="button" (click)="closeModal()" class="bg-gray-500 hover:bg-gray-600 text-white py-1 px-3 rounded-md mr-2">Cancel</button>
-          <button mat-button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white py-1 px-3 rounded-md">{{isNew ? 'Save' : 'Update'}}</button>
+        <div class="dialog-actions">
+          <button mat-button type="button" (click)="closeDialog()" class="cancel-button">Cancel</button>
+          <button mat-button type="submit" class="submit-button">{{isNew ? 'Save' : 'Update'}}</button>
         </div>
       </form>
     </mat-dialog-content>
   </ng-template>
+  
 </div>
 
 <!-- Toast Notifications -->
