--- a/src/app/component/employee.component.html
+++ b/src/app/component/employee.component.html
@@ -42,14 +42,14 @@
       <td mat-cell *matCellDef="let employee"> {{employee.dateOfBirth | date:'yyyy-MM-dd'}} </td>
     </ng-container>
 
-    <!-- Actions Column -->
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
-      <td mat-cell *matCellDef="let employee">
-        <button mat-button (click)="onEdit(employee)" class="bg-blue-500 hover:bg-blue-600 text-white py-1 px-3 rounded-md mr-2">Edit</button>
-        <button mat-button (click)="onDelete(employee.id)" class="bg-red-500 hover:bg-red-600 text-white py-1 px-3 rounded-md">Delete</button>
-      </td>
-    </ng-container>
+ <!-- Actions Column -->
+<ng-container matColumnDef="actions">
+  <th mat-header-cell *matHeaderCellDef> Actions </th>
+  <td mat-cell *matCellDef="let employee">
+    <button mat-button (click)="onEdit(employee)" class="bg-blue-500 hover:bg-blue-600 text-white py-1 px-3 rounded-md mr-2">Edit</button>
+    <button mat-button (click)="onDelete(employee.id)" class="bg-red-500 hover:bg-red-600 text-white py-1 px-3 rounded-md">Delete</button>
+  </td>
+</ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -107,9 +107,10 @@
           </mat-form-field>
         </div>
         <div class="dialog-actions">
-          <button mat-button (click)="dialog.closeAll()">Cancel</button>
-          <button mat-raised-button color="primary" type="submit">Save</button>
+          <button mat-button (click)="closeDialog()">Cancel</button>
+          <button mat-raised-button  color="primary" type="submit">Save</button>
         </div>
+        
       </form>
     </mat-dialog-content>
   </ng-template>
@@ -121,7 +122,7 @@
       <p>Are you sure you want to delete this employee?</p>
     </mat-dialog-content>
     <mat-dialog-actions>
-      <button mat-button (click)="cancelDelete()">Cancel</button>
+      <button mat-button mat-dialog-close>Cancel</button>
       <button mat-raised-button color="warn" (click)="confirmDelete()">Delete</button>
     </mat-dialog-actions>
   </ng-template>
