--- a/src/app/component/employee.component.html
+++ b/src/app/component/employee.component.html
@@ -42,14 +42,13 @@
       <td mat-cell *matCellDef="let employee"> {{employee.dateOfBirth | date:'yyyy-MM-dd'}} </td>
     </ng-container>
 
- <!-- Actions Column -->
-<ng-container matColumnDef="actions">
-  <th mat-header-cell *matHeaderCellDef> Actions </th>
-  <td mat-cell *matCellDef="let employee">
-    <button mat-button (click)="onEdit(employee)" class="bg-blue-500 hover:bg-blue-600 text-white py-1 px-3 rounded-md mr-2">Edit</button>
-    <button mat-button (click)="onDelete(employee.id)" class="bg-red-500 hover:bg-red-600 text-white py-1 px-3 rounded-md">Delete</button>
-  </td>
-</ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let employee">
+        <button mat-button (click)="onEdit(employee)" class="bg-blue-500 hover:bg-blue-600 text-white py-1 px-3 rounded-md mr-2">Edit</button>
+        <button mat-button (click)="onDelete(employee)" class="bg-red-500 hover:bg-red-600 text-white py-1 px-3 rounded-md">Delete</button>
+      </td>
+    </ng-container>  
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -115,15 +114,14 @@
     </mat-dialog-content>
   </ng-template>
 
-  <!-- Delete Confirmation Dialog -->
-  <ng-template #deleteDialogTemplate>
+  <ng-template #deleteDialogTemplate let-dialogRef="dialogRef">
     <h2 mat-dialog-title>Confirm Delete</h2>
     <mat-dialog-content>
       <p>Are you sure you want to delete this employee?</p>
     </mat-dialog-content>
     <mat-dialog-actions>
-      <button mat-button mat-dialog-close>Cancel</button>
-      <button mat-raised-button color="warn" (click)="confirmDelete()">Delete</button>
+      <button mat-button (click)="close(dialogRef)">Cancel</button>
+      <button mat-raised-button color="warn" (click)="confirmDelete(dialogRef)">Delete</button>
     </mat-dialog-actions>
   </ng-template>
 
