--- a/src/app/component/employee.component.css
+++ b/src/app/component/employee.component.css
@@ -18,7 +18,7 @@ table {
 }
 
   td, th {
-    width: 18%;
+    width: 5%;
   }
   
   .wider-dialog-content {
@@ -55,10 +55,37 @@ table {
 
 
 .submit-button:hover {
-  background-color: #bad5f0; /* Darker blue on hover */
+  background-color: #d3e0ee; /* Darker blue on hover */
 }
 
 /* Styling for mat-error */
 .mat-error {
   font-size: 12px;
+}
+
+.toast {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+/* Add styles to customize the 'Edit' button */
+
+.edit-button:hover {
+  background-color: #d3e0ee; /* Tailwind Blue 600 */
+}
+
+/* Add styles to customize the 'Delete' button */
+.delete-button {
+  background-color: transparent; /* No background color */
+  color: #ef4444; /* Tailwind Red 500 */
+}
+
+.delete-button:hover {
+  color: #dc2626; /* Tailwind Red 600 */
+  background-color: transparent; /* No background color */
 }
