--- a/src/app/component/role-menu.component.css
+++ b/src/app/component/role-menu.component.css
@@ -14,4 +14,12 @@
     text-align: center;
     color: #3f51b5;
   }
+  .role-description {
+    margin-top: 20px;
+    font-size: 14px;
+    color: #555;
+  }
+  .role-description p {
+    margin: 0;
+  }
   
