--- a/src/app/component/employee.component.html
+++ b/src/app/component/employee.component.html
@@ -15,7 +15,7 @@
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> No </th>
       <td mat-cell *matCellDef="let employee"> {{employee.id}} </td>
     </ng-container>
 
